<resources>
    <string name="app_name">Nexas</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create</string>
    <string name="username">Username:</string>
    <string name="username_hint">Enter your username</string>
    <string name="email">Email:</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="lastname_hint">Enter your last name</string>
    <string name="firstname_hint">Enter your first name</string>
    <string name="bio">Bio</string>
    <string name="camera_switch">Switch Camera</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="transcript">Transcript</string>
    <string name="group_name">Group Name</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="enter_group_description">Enter Group Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>